--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,8 @@
       
     -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.core.css">
+    <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.default.css">
 
     <!--
 
@@ -37,6 +39,9 @@
     <script type="text/javascript" src="/bower_components/underscore/underscore.js"></script>
     <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
     <script type="text/javascript" src="/bower_components/backbone.googlemaps/lib/backbone.googlemaps.js"></script>
+    <script type="text/javascript" src="/bower_components/alertify.js/lib/alertify.min.js"></script>
+    <script type="text/javascript" src="/bower_components/screenfull/dist/screenfull.min.js"></script>
+    <script type="text/javascript" src="/bower_components/howler/howler.min.js"></script>
 
   </head>
 
