--- a/views/map/index.ejs
+++ b/views/map/index.ejs
@@ -1,4 +1,5 @@
 <div id="map"></div>
+<div class="mute"></div>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA62ZFFGs9LGUx-22aS5HggQWuRgqEPprE&sensor=false"></script>
-<script src="js/views/map-view.js"></script>
+<script src="js/views/map.js"></script>
