--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.core.css">
     <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.default.css">
+    <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.default.css">
+    <link rel="stylesheet" href="/bower_components/humane-js/themes/bigbox.css">
 
     <!--
 
@@ -40,9 +42,11 @@
     <script type="text/javascript" src="/bower_components/backbone/backbone.js"></script>
     <script type="text/javascript" src="/bower_components/backbone.googlemaps/lib/backbone.googlemaps.js"></script>
     <script type="text/javascript" src="/bower_components/alertify.js/lib/alertify.min.js"></script>
+    <script type="text/javascript" src="/bower_components/humane-js/humane.min.js"></script>
     <script type="text/javascript" src="/bower_components/screenfull/dist/screenfull.min.js"></script>
     <script type="text/javascript" src="/bower_components/howler/howler.min.js"></script>
     <script type="text/javascript" src="/bower_components/keymaster/keymaster.js"></script>
+    <script type="text/javascript" src="/bower_components/faker/Faker.js"></script>
 
   </head>
 
