added poor mans scoreboard

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -41,3 +41,8 @@ html, body, #map {
 .muted {
     background-image: url(../images/mute.png);
 }
+
+#score-list {
+  visibility: hidden;
+  display: none;
+}
