--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.default.css">
     <link rel="stylesheet" href="/bower_components/alertify.js/themes/alertify.default.css">
     <link rel="stylesheet" href="/bower_components/humane-js/themes/bigbox.css">
+    <link rel="stylesheet" href="https://raw.github.com/tastejs/todomvc/gh-pages/architecture-examples/backbone/bower_components/todomvc-common/base.css">
 
     <!--
 
@@ -47,14 +48,20 @@
     <script type="text/javascript" src="/bower_components/howler/howler.min.js"></script>
     <script type="text/javascript" src="/bower_components/keymaster/keymaster.js"></script>
     <script type="text/javascript" src="/bower_components/faker/Faker.js"></script>
-
   </head>
 
   <body>
 
+    <script type="text/template" id="score-template">
+      <span><strong>{{ name }}</strong> {{ score }}</span>
+    </script>
+
+    <div id="scoreapp">
+      <ul id="score-list"></div>
+    </div>
+
     <!-- Include the view file for the current controller/route -->
     <%- body %>
-
 
     <!--
 
@@ -71,7 +78,10 @@
     <!-- then beef it up with some convenience logic for talking to Sails.js -->
     <script type="text/javascript" src="/js/sails.io.js"></script>
     <!-- listen on socket.io for incoming messages -->
+    <script type="text/javascript" src="/js/score.js"></script>
     <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/question.js"></script>
+    <script type="text/javascript" src="/js/board.js"></script>
 
     <!--
 
