faker bower package is messed up, bundling

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -47,7 +47,7 @@
     <script type="text/javascript" src="/bower_components/screenfull/dist/screenfull.min.js"></script>
     <script type="text/javascript" src="/bower_components/howler/howler.min.js"></script>
     <script type="text/javascript" src="/bower_components/keymaster/keymaster.js"></script>
-    <script type="text/javascript" src="/bower_components/faker/Faker.js"></script>
+    <script type="text/javascript" src="/js/faker.js"></script>
   </head>
 
   <body>
